ft(password/reset): add sendEmail helper method
